--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
                 <div>
                     <h1>Streamline Your Checkout Process with Lightning-Fast Billing and Barcode Scanning</h1>
                     <h5>
-                        Say goodbye to long queues and eliminate manual entry errors with Dhanda's state-of-the-art barcode
-                        scanning technology. Our seamless billing system enables you to accelerate your checkout process,
-                        ensuring swift and accurate transactions. Experience unparalleled efficiency and customer satisfaction
-                        as you effortlessly scan and process items, saving time and boosting productivity.
+                        Streamline your checkout process with lightning-fast billing and advanced barcode scanning
+                        technology. Say goodbye to long queues and manual entry errors.
                     </h5>
                 </div>
                 <img src="./assets/images/mockup/3billing.png" class="img1">
@@ -63,9 +61,12 @@
                 <div>
                     <h1>Streamline Your Checkout Process with Lightning-Fast Billing and Barcode Scanning</h1>
                     <h5>
-                        Say goodbye to long queues and eliminate manual entry errors with Dhanda's state-of-the-art barcode
-                        scanning technology. Our seamless billing system enables you to accelerate your checkout process,
-                        ensuring swift and accurate transactions. Experience unparalleled efficiency and customer satisfaction
+                        Say goodbye to long queues and eliminate manual entry errors with Dhanda's state-of-the-art
+                        barcode
+                        scanning technology. Our seamless billing system enables you to accelerate your checkout
+                        process,
+                        ensuring swift and accurate transactions. Experience unparalleled efficiency and customer
+                        satisfaction
                         as you effortlessly scan and process items, saving time and boosting productivity.
                     </h5>
                 </div>
