--- a/index.html
+++ b/index.html
@@ -50,26 +50,38 @@
                 <div>
                     <h1>Streamline Your Checkout Process with Lightning-Fast Billing and Barcode Scanning</h1>
                     <h5>
-                        Say goodbye to long queues and eliminate manual entry errors with Dhanda's state-of-the-art barcode
-                        scanning technology. Our seamless billing system enables you to accelerate your checkout process,
-                        ensuring swift and accurate transactions. Experience unparalleled efficiency and customer satisfaction
+                        Say goodbye to long queues and eliminate manual entry errors with Dhanda's state-of-the-art
+                        barcode
+                        scanning technology. Our seamless billing system enables you to accelerate your checkout
+                        process,
+                        ensuring swift and accurate transactions. Experience unparalleled efficiency and customer
+                        satisfaction
                         as you effortlessly scan and process items, saving time and boosting productivity.
                     </h5>
                 </div>
                 <img src="./assets/images/mockup/3billing.png" class="img1">
             </div>
             <div class="feature1 fet2">
-                <img src="./assets/images/mockup/4purchase.png" class="img1">
+                <img src="./assets/images/mockup/10inventory.png" class="img1">
                 <div>
-                    <h1>Streamline Your Checkout Process with Lightning-Fast Billing and Barcode Scanning</h1>
+                    <h1>Real-Time Inventory Analysis with AI Insights</h1>
                     <h5>
-                        Say goodbye to long queues and eliminate manual entry errors with Dhanda's state-of-the-art barcode
-                        scanning technology. Our seamless billing system enables you to accelerate your checkout process,
-                        ensuring swift and accurate transactions. Experience unparalleled efficiency and customer satisfaction
-                        as you effortlessly scan and process items, saving time and boosting productivity.
+                        Stay ahead of the competition with real-time inventory analysis enriched by AI insights. Gain
+                        valuable visibility into stock levels, identify trends, and make informed decisions.
                     </h5>
                 </div>
             </div>
+            <div class="feature1 fet2">
+                <div>
+                    <h1>Seamless Procurement from Distributors</h1>
+                    <h5>
+                        Effortlessly manage your procurement process from multiple distributors with our intuitive
+                        platform. Simplify your supply chain, reduce delays, and ensure a steady flow of products.
+                    </h5>
+                </div>
+                <img src="./assets/images/mockup/5bazaar.png" class="img1">
+            </div>
+
         </div>
     </section>
 
