--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <script src="./js/main.js"></script>
+    <!-- <script src="./js/main.js"></script> -->
     <nav class="navbar">
         <div class="nav">
             <span class="log"><a href="/"><img src="./assets/images/Dhanda.studio.png" class="logo"></a></span>
@@ -37,7 +37,7 @@
     </section>
 
     <section class="sect2">
-        <h1>Unlock the Power of Dhanda's Comprehensive Suite of Tools</h1>
+        <h1>Unlock the Power of Dhanda app</h1>
         <div class="shadowbox">
             <div>
                 <h5><span>Streamline Your Operations with Ease:</span> Unify Sales, Purchases, Inventory, and More in
