--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section class="sect1">
         <div>
-            <h1>Welcome to Dhanda - Your All-in-One Solution for Retailers and Wholesalers</h1>
+            <h1>Welcome to Dhanda - Your All-in-One Solution for Retail</h1>
             <h5>Supercharging Retail For An Enhanced Experience</h5>
         </div>
     </section>
@@ -80,6 +80,16 @@
                     </h5>
                 </div>
                 <img src="./assets/images/mockup/5bazaar.png" class="img1">
+            </div>
+            <div class="feature1 fet2">
+                <img src="./assets/images/mockup/11order managemet.png" class="img1">
+                <div>
+                    <h1>Effortlessly Expand Your Sales Channels with Dhanda</h1>
+                    <h5>
+                        Effortlessly manage multiple online sales channels with Dhanda's integrated marketplace. Expand
+                        your reach, promote your products, and drive conversions seamlessly within our platform.
+                    </h5>
+                </div>
             </div>
 
         </div>
