--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         content="Dhanda.studio empowers retailers and wholesalers to streamline inventory management, optimize procurement, and integrate seamlessly into the digital ecosystem.">
     <title>Dhanda.studio</title>
     <link rel="shortcut icon" href="./assets/images/icon.png">
+
 </head>
 
 <body>
-    <!-- <script src="./js/main.js"></script> -->
+    <script src="./main.js"></script>
     <nav class="navbar">
         <div class="nav">
             <span class="log"><a href="/"><img src="./assets/images/Dhanda.studio.png" class="logo"></a></span>
@@ -34,9 +35,12 @@
             <h1>Welcome to Dhanda - Your All-in-One Solution for Retail</h1>
             <h5>Supercharging Retail For An Enhanced Experience</h5>
         </div>
+        <a href="#sect2">
+            <img id="scrollButton" src="./assets/images/expand_more_black_24dp.svg" alt="Scroll Button">
+        </a>
     </section>
 
-    <section class="sect2">
+    <section class="sect2" id="sect2">
         <h1>Unlock the Power of Dhanda app</h1>
         <div class="shadowbox">
             <div>
@@ -50,13 +54,8 @@
                 <div>
                     <h1>Streamline Your Checkout Process with Lightning-Fast Billing and Barcode Scanning</h1>
                     <h5>
-                        Say goodbye to long queues and eliminate manual entry errors with Dhanda's state-of-the-art
-                        barcode
-                        scanning technology. Our seamless billing system enables you to accelerate your checkout
-                        process,
-                        ensuring swift and accurate transactions. Experience unparalleled efficiency and customer
-                        satisfaction
-                        as you effortlessly scan and process items, saving time and boosting productivity.
+                        Revolutionize your checkout process with lightning-fast billing and precision barcode scanning.
+                        Eliminate queues and errors for a seamless retail experience.
                     </h5>
                 </div>
                 <img src="./assets/images/mockup/3billing.png" class="img1">
@@ -91,9 +90,36 @@
                     </h5>
                 </div>
             </div>
-
+            <div class="feature1 fet2">
+                <div>
+                    <h1>Accounts + GST Management</h1>
+                    <h5>
+                        Take control of your financials with our comprehensive Accounts and GST management tools.
+                        Streamline bookkeeping, track expenses, and ensure compliance with ease.
+                    </h5>
+                </div>
+                <img src="./assets/images/mockup/6navig.png" class="img1">
+            </div>
         </div>
     </section>
+
+    <footer>
+        <hr class="rounded">
+        <div class="flinks">
+            <span><a href="contact.html">Contact Us</a></span>
+            <span><a href="#">Terms of Use</a><a href="#">Privacy Policy</a></span>
+        </div>
+        <div class="fsoc">
+            <a href="https://www.instagram.com/dhanda.studio/">
+                <img src="./assets/images/instagram.png" class="socialic">
+            </a>
+            <a href="https://www.linkedin.com/company/dhanda-studio/">
+                <img src="./assets/images/linkedin.png" class="socialic">
+            </a>
+            <a href="mailto:admin@dhanda.studio">admin@dhanda.studio</a>
+        </div>
+        <p>2022 © Dhanda.studio</p>
+    </footer>
 
 
 </body>
