--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 </head>
 
 <body>
-    <script src="./main.js"></script>
+    <!-- <script src="./main.js"></script> -->
     <nav class="navbar">
         <div class="nav">
             <span class="log"><a href="/"><img src="./assets/images/Dhanda.studio.png" class="logo"></a></span>
             <div class="navlinks">
                 <a href="/">About Us</a>
-                <a href="/">Contact</a>
+                <a href="/contact.html">Contact</a>
             </div>
         </div>
         <div class="navright">
@@ -103,10 +103,23 @@
         </div>
     </section>
 
+    <section class="sect3" id="subscribe">
+        <div class="scrtxt">
+            <p>Subscibe Now!!</p>
+            <p>Sign-up for Beta and Stay Tuned for updates !!</p>
+            <div class="staytuned">
+                <form method="post" name="Newsletter">
+                    <input type="email" id="email" name="email" placeholder="Enter Email">
+                    <button type="submit" id="submit" class="subb">Stay Tuned</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <hr class="rounded">
         <div class="flinks">
-            <span><a href="contact.html">Contact Us</a></span>
+            <span><a href="/contact.html">Contact Us</a></span>
             <span><a href="#">Terms of Use</a><a href="#">Privacy Policy</a></span>
         </div>
         <div class="fsoc">
