--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <img src="./assets/images/mockup/2.png" class="img1">
         </div>
         <div class="features">
-            <div class="feature1">
+            <div class="feature1" style="margin-top: 0px">
                 <div>
                     <h1>Streamline Your Checkout Process with Lightning-Fast Billing and Barcode Scanning</h1>
                     <h5>
@@ -70,7 +70,7 @@
                     </h5>
                 </div>
             </div>
-            <div class="feature1 fet2">
+            <div class="feature1">
                 <div>
                     <h1>Seamless Procurement from Distributors</h1>
                     <h5>
@@ -90,7 +90,7 @@
                     </h5>
                 </div>
             </div>
-            <div class="feature1 fet2">
+            <div class="feature1">
                 <div>
                     <h1>Accounts + GST Management</h1>
                     <h5>
@@ -105,9 +105,9 @@
 
     <section class="sect3" id="subscribe">
         <div class="scrtxt">
-            <p>Subscibe Now!!</p>
-            <p>Sign-up for Beta and Stay Tuned for updates !!</p>
+            <h2>Join BETA</h2>
             <div class="staytuned">
+                <h4>Sign-up for Beta and Stay Tuned for updates !!</h4>
                 <form method="post" name="Newsletter">
                     <input type="email" id="email" name="email" placeholder="Enter Email">
                     <button type="submit" id="submit" class="subb">Stay Tuned</button>
