--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,65 @@
 <!DOCTYPE html>
+
 <head>
-    
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/contact.css">
 </head>
+
+<body>
+    <nav class="navbar">
+        <div class="nav">
+            <span class="log"><a href="/"><img src="./assets/images/Dhanda.studio.png" class="logo"></a></span>
+            <div class="navlinks">
+                <a href="/">About Us</a>
+                <a href="/contact.html" class="active shadow">Contact</a>
+            </div>
+        </div>
+        <div class="navright">
+            <span><a href="/#subscribe" class="sub">Subscribe</a></span>
+        </div>
+    </nav>
+
+
+    <section>
+        <div class="left-side">
+            <h2>Dhanda.studio</h2><br>
+            <p><span>Address: </span>#273, 2nd Main Road, 1st Block, R.T Nagar</p>
+            <p>Bangalore, Karnataka, India</p>
+            <p>Pin code: 560032 </p><br>
+            <p><span>Ph: </span><a href="https://wa.me/message/OUUAV6GLYG3AK1">+919164015302</a></p>
+        </div>
+        <div class="right-side">
+            <h2>Contact Us</h2>
+            <form class="contact-form" name="Contact-form" netlify>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="subject">Subject:</label>
+                <input type="text" id="subject" name="subject" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" required></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </section>
+
+
+    <footer>
+        <hr class="rounded">
+        <div class="flinks">
+            <span><a href="/contact.html">Contact Us</a></span>
+            <span><a href="#">Terms of Use</a><a href="#">Privacy Policy</a></span>
+        </div>
+        <div class="fsoc">
+            <a href="https://www.instagram.com/dhanda.studio/">
+                <img src="./assets/images/instagram.png" class="socialic">
+            </a>
+            <a href="https://www.linkedin.com/company/dhanda-studio/">
+                <img src="./assets/images/linkedin.png" class="socialic">
+            </a>
+            <a href="mailto:admin@dhanda.studio">admin@dhanda.studio</a>
+        </div>
+        <h6>2022 © Dhanda.studio</h6>
+    </footer>
+</body>
