--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="navright">
-            <span><button class="sub" onclick="subscribeNow()">Subscribe</button></span>
+            <span><a href="#subscribe" class="sub">Subscribe</a></span>
         </div>
     </nav>
 
@@ -108,7 +108,7 @@
             <h2>Join BETA</h2>
             <div class="staytuned">
                 <h4>Sign-up for Beta and Stay Tuned for updates !!</h4>
-                <form method="post" name="Newsletter">
+                <form method="post" name="Beta" netlify>
                     <input type="email" id="email" name="email" placeholder="Enter Email">
                     <button type="submit" id="submit" class="subb">Stay Tuned</button>
                 </form>
@@ -131,7 +131,7 @@
             </a>
             <a href="mailto:admin@dhanda.studio">admin@dhanda.studio</a>
         </div>
-        <p>2022 © Dhanda.studio</p>
+        <h6>2022 © Dhanda.studio</h6>
     </footer>
 
 
