--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,15 @@
 <head>
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/contact.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Dhanda.studio">
+    <meta name="description"
+        content="Contact Dhanda.studio now and transform your retail business">
+    <title>Dhanda.studio - Contact</title>
+    <link rel="shortcut icon" href="./assets/images/icon.png">
 </head>
 
 <body>
@@ -32,10 +41,10 @@
             <h2>Contact Us</h2>
             <form class="contact-form" name="Contact-form" netlify>
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="subject">Subject:</label>
                 <input type="text" id="subject" name="subject" required>
                 <label for="email">Email:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="subject">Subject:</label>
                 <input type="email" id="email" name="email" required>
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" required></textarea>
