--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <div class="features">
             <div class="feature1" style="margin-top: 0px">
                 <div>
-                    <h1>Streamline Your Checkout Process with Lightning-Fast Billing and Barcode Scanning</h1>
+                    <h1>Streamline Your Checkout Process with Lightning-Fast Billing</h1>
                     <h5>
-                        Revolutionize your checkout process with lightning-fast billing and precision barcode scanning.
-                        Eliminate queues and errors for a seamless retail experience.
+                        Transform your checkout process with lightning-fast billing and accurate barcode scanning. Say
+                        goodbye to long lines and errors, creating a seamless retail experience.
                     </h5>
                 </div>
                 <img src="./assets/images/mockup/3billing.png" class="img1">
@@ -65,8 +65,8 @@
                 <div>
                     <h1>Real-Time Inventory Analysis with AI Insights</h1>
                     <h5>
-                        Stay ahead of the competition with real-time inventory analysis enriched by AI insights. Gain
-                        valuable visibility into stock levels, identify trends, and make informed decisions.
+                        Stay ahead with AI-powered inventory insights. Get a clear view of stock levels, spot trends,
+                        and make smarter decisions.
                     </h5>
                 </div>
             </div>
@@ -74,8 +74,8 @@
                 <div>
                     <h1>Seamless Procurement from Distributors</h1>
                     <h5>
-                        Effortlessly manage your procurement process from multiple distributors with our intuitive
-                        platform. Simplify your supply chain, reduce delays, and ensure a steady flow of products.
+                        Easily manage procurement from various distributors on our intuitive platform. Streamline your
+                        supply chain, minimize delays, and guarantee consistent product flow.
                     </h5>
                 </div>
                 <img src="./assets/images/mockup/5bazaar.png" class="img1">
@@ -85,8 +85,8 @@
                 <div>
                     <h1>Effortlessly Expand Your Sales Channels with Dhanda</h1>
                     <h5>
-                        Effortlessly manage multiple online sales channels with Dhanda's integrated marketplace. Expand
-                        your reach, promote your products, and drive conversions seamlessly within our platform.
+                        Manage multiple online sales channels effortlessly with Dhanda's unified marketplace. Broaden
+                        your reach, showcase your products, and boost conversions all in one platform.
                     </h5>
                 </div>
             </div>
@@ -94,8 +94,8 @@
                 <div>
                     <h1>Accounts + GST Management</h1>
                     <h5>
-                        Take control of your financials with our comprehensive Accounts and GST management tools.
-                        Streamline bookkeeping, track expenses, and ensure compliance with ease.
+                        Master your financials using our all-inclusive Accounts and GST tools. Simplify bookkeeping,
+                        monitor expenses, and maintain compliance effortlessly.
                     </h5>
                 </div>
                 <img src="./assets/images/mockup/6navig.png" class="img1">
