added devtool blocker

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
     <!-- <script src="./main.js"></script> -->
+    <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
     <nav class="navbar">
         <div class="nav">
             <span class="log"><a href="/"><img src="./assets/images/Dhanda.studio.png" class="logo"></a></span>
