--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
     <nav class="navbar">
         <div class="nav">
             <span class="log"><a href="/"><img src="./assets/images/Dhanda.studio.png" class="logo"></a></span>
