--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         content="Dhanda.studio empowers retailers and wholesalers to streamline inventory management, optimize procurement, and integrate seamlessly into the digital ecosystem.">
     <title>Dhanda.studio</title>
     <link rel="shortcut icon" href="./assets/images/icon.png">
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "ojxbjcv364");
+    </script>
 
 </head>
 
