--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <!-- CookieBot -->
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="5811f624-c38f-4108-a819-5d6f974cbc41" type="text/javascript" async></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-98RV262LFK"></script>
     <script>
@@ -11,7 +13,7 @@
     
       gtag('config', 'G-98RV262LFK');
     </script>
-    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="5811f624-c38f-4108-a819-5d6f974cbc41" type="text/javascript" async></script>
+    
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
