added advista in footer

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </a>
             <a href="mailto:admin@dhanda.studio">admin@dhanda.studio</a>
         </div>
-        <h6>2022 © Dhanda.studio</h6>
+        <h6>2022 © Dhanda.studio a product of Advista Marketing (P) Ltd. (advistaltd.com)</h6>
     </footer>
 
 
