--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 
     <section>
         <div class="left-side">
-            <h2>Dhanda.studio</h2><br>
+            <h2>Dhanda.studio (Advista Marketing (P) Ltd</h2><br>
             <p><span>Address: </span>#273, 2nd Main Road, 1st Block, R.T Nagar</p>
             <p>Bangalore, Karnataka, India</p>
             <p>Pin code: 560032 </p><br>
