--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,9 @@
 
     <section>
         <div class="left-side">
-            <h2>Dhanda.studio (Advista Marketing (P) Ltd</h2><br>
-            <p><span>Address: </span>#273, 2nd Main Road, 1st Block, R.T Nagar</p>
+            <h2>Dhanda.studio</h2><br>
+            <p><span>Address: </span>Advista Marketing (P) Ltd</p>
+            <p></p>#273, 2nd Main Road, 1st Block, R.T Nagar</p>
             <p>Bangalore, Karnataka, India</p>
             <p>Pin code: 560032 </p><br>
             <p><span>Ph: </span><a href="https://wa.me/message/OUUAV6GLYG3AK1">+919164015302</a></p>
